--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -147,7 +147,7 @@ jobs:
           THAPI_JOBID=0 mpirun -n 2 env
       - name: integration test ${{ matrix.bats_file }}
         run: |
-          BATS_TEST_TIMEOUT=30 ./bats-core/bin/bats --verbose-run integration_tests/${{ matrix.bats_file }}.bats
+          BATS_TEST_TIMEOUT=30 ./bats-core/bin/bats --print-output-on-failure --show-output-of-passing-tests  integration_tests/${{ matrix.bats_file }}.bats
 
   build-in-tree:
     needs: [babeltrace2, pre_job]
