--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -145,6 +145,9 @@ jobs:
       - name: print-env
         run: |
           THAPI_JOBID=0 mpirun -n 2 env
+      - name: integration test-2 ${{ matrix.bats_file }}
+        run: |
+          THAPI_JOBID=0 ${MPIRUN:-mpirun} -n 12 $THAPI_BIN_DIR/iprof --debug 0 -- $THAPI_TEST_BIN
       - name: integration test ${{ matrix.bats_file }}
         run: |
           BATS_TEST_TIMEOUT=30 ./bats-core/bin/bats --print-output-on-failure --show-output-of-passing-tests  integration_tests/${{ matrix.bats_file }}.bats
