--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -29,15 +29,14 @@ require 'date'
 
 module LoggerRefinement
   refine(Logger) do
-  def info_block(message, &block)
-      self.info(message+": entry") if message
+    def info_block(message, &block)
+      info(message + ': entry') if message
       block.call
-      self.info(message+": exit") if message
+      info(message + ': exit') if message
+    end
   end
 end
-end
 using LoggerRefinement
-
 
 def exec(cmd, opts: {}, debug: true)
   return Open3.capture3(opts, cmd).first unless debug
@@ -111,22 +110,22 @@ end
 def env_fetch_first_mpi(*args, default: nil)
   v = env_fetch_first(*args)
   if in_mpi_env?
-      if v.nil?
-        LOGGER.fatal { "A MPI JOBID is set but some sone MPI env are missing" }
-        exit(1)
-      else
-        return v
-      end
+    return v unless v.nil?
+
+    LOGGER.fatal { 'A MPI JOBID is set but some sone MPI env are missing' }
+    exit(1)
+
   else
-    LOGGER.warn { "A MPI JOBIB haven't be set, but some args have been set, ignoring them"} unless v.nil?
-    return default
+    LOGGER.warn { "A MPI JOBIB haven't be set, but some args have been set, ignoring them" } unless v.nil?
+    default
   end
 end
 
 # Multiple iprof may run in parallel (for example using ctest),
 # so use a random hex by default
 def mpi_job_id
-  @mpi_job_id ||= env_fetch_first_mpi('THAPI_JOBID', 'PALS_APID', 'PMI_JOBID', 'OMPI_MCA_ess_base_jobid', default: SecureRandom.hex)
+  @mpi_job_id ||= env_fetch_first_mpi('THAPI_JOBID', 'PALS_APID', 'PMI_JOBID', 'OMPI_MCA_ess_base_jobid',
+                                      default: SecureRandom.hex)
 end
 
 def mpi_rank_id
@@ -134,11 +133,13 @@ def mpi_rank_id
 end
 
 def mpi_local_size
-  env_fetch_first_mpi('PALS_LOCAL_SIZE', 'PMI_LOCAL_SIZE', 'OMPI_COMM_WORLD_LOCAL_SIZE', 'MPI_LOCALNRANKS', default: 1).to_i
+  env_fetch_first_mpi('PALS_LOCAL_SIZE', 'PMI_LOCAL_SIZE', 'OMPI_COMM_WORLD_LOCAL_SIZE', 'MPI_LOCALNRANKS',
+                      default: 1).to_i
 end
 
 def mpi_local_rank_id
-  env_fetch_first_mpi('PALS_LOCAL_RANKID', 'PMI_LOCAL_RANK', 'OMPI_COMM_WORLD_LOCAL_RANK', 'MPI_LOCALRANKID', default: 0).to_i
+  env_fetch_first_mpi('PALS_LOCAL_RANKID', 'PMI_LOCAL_RANK', 'OMPI_COMM_WORLD_LOCAL_RANK', 'MPI_LOCALRANKID',
+                      default: 0).to_i
 end
 
 def mpi_local_master?
@@ -249,11 +250,11 @@ class Sync_daemon
     sleep
   end
 
-  def lazy_exec(message=nil, &block)
+  def lazy_exec(message = nil, &block)
     LOGGER.info_block(message) do
-    # Don't inline, it Trap doesn't work with logger
-    # https://bugs.ruby-lang.org/issues/7917
-    _lazy_exec(&block)
+      # Don't inline, it Trap doesn't work with logger
+      # https://bugs.ruby-lang.org/issues/7917
+      _lazy_exec(&block)
     end
   end
 
@@ -271,7 +272,7 @@ class Sync_daemon
   end
 
   def finalize
-    lazy_exec("Finalize Sync_daemon") do
+    lazy_exec('Finalize Sync_daemon') do
       `kill -#{RT_SIGNAL_FINISH} #{@pid}`
     end
   end
@@ -283,7 +284,7 @@ class Sync_daemon
   end
 
   def global_barrier
-    lazy_exec("Global_barrier") do
+    lazy_exec('Global_barrier') do
       `kill -#{RT_SIGNAL_GLOBAL_BARRIER} #{@pid}`
     end
   end
@@ -291,9 +292,8 @@ class Sync_daemon
   def self.open
     yield f = new
   ensure
-      f.finalize
+    f.finalize
   end
-
 end
 
 #                        __
@@ -306,6 +306,7 @@ end
 
 def sampling?
   return false unless OPTIONS[:sample]
+
   env_fetch_first('LTTNG_UST_SAMPLING_MASTER_ONLY', default: '0') == '0' || mpi_local_master?
 end
 
@@ -358,7 +359,7 @@ def env_tracers
 
   # Sample
   if sampling?
-    LOGGER.debug("Sampling Enabled")
+    LOGGER.debug('Sampling Enabled')
     h['LTTNG_UST_SAMPLING'] = 1
     h['LTTNG_UST_SAMPLING_ENERGY'] = 1
     h['ZES_ENABLE_SYSMAN'] = 1 if OPTIONS[:'backend-names'].include?('ze')
@@ -540,11 +541,11 @@ def teardown_lttng
   # In theory, opening the lttng-sessiond.pid file is racy.
   # It's possible that the sessiond spawned and didn't yet write the file
   # In practice, there is a lot of work between the spawn and the write, so it should be ok
-  LOGGER.info_block('Killing sessiond')  {
+  LOGGER.info_block('Killing sessiond') do
     pid = File.read(File.join(lttng_home_dir, '.lttng', 'lttng-sessiond.pid')).to_i
     Process.kill('SIGKILL', pid)
     FileUtils.rm_f(lttng_home_dir)
-  }
+  end
 end
 
 #    _                                   _
@@ -604,28 +605,27 @@ def trace_and_on_node_processing(usr_argv)
   syncd = Sync_daemon.new
 
   Sync_daemon.open do |syncd|
-  # Load Tracers and APILoaders Lib
-  backends, h = env_tracers
+    # Load Tracers and APILoaders Lib
+    backends, h = env_tracers
 
-  # All ranks need to set the LLTTNG_HOME env
-  # so they can have access to the daemon
-  ENV['LTTNG_HOME'] = lttng_home_dir
-  # Only local master spawn LTTNG daemon and start session
-  setup_lttng(backends) if mpi_local_master?
-  syncd.local_barrier('waiting_for_lttng_setup')
-  # Launch User Command
-  launch_usr_bin(h, usr_argv)
+    # All ranks need to set the LLTTNG_HOME env
+    # so they can have access to the daemon
+    ENV['LTTNG_HOME'] = lttng_home_dir
+    # Only local master spawn LTTNG daemon and start session
+    setup_lttng(backends) if mpi_local_master?
+    syncd.local_barrier('waiting_for_lttng_setup')
+    # Launch User Command
+    launch_usr_bin(h, usr_argv)
 
-  # We need to be sure that all the local ranks are finished
-  # before the local master stops the lttng session
-  syncd.local_barrier('waiting_for_application_ending')
-  return unless mpi_local_master?
+    # We need to be sure that all the local ranks are finished
+    # before the local master stops the lttng session
+    syncd.local_barrier('waiting_for_application_ending')
+    return unless mpi_local_master?
 
-  teardown_lttng
-  # Preprocess trace
-  on_node_processing(backends, syncd)
+    teardown_lttng
+    # Preprocess trace
+    on_node_processing(backends, syncd)
   end
-
 end
 
 def global_processing(folder)
@@ -657,20 +657,18 @@ def global_processing(folder)
   LOGGER.debug(args)
 
   LOGGER.info_block('IO dump') do
+    fo = if OPTIONS[:'analysis-output']
+           File.open(OPTIONS[:'analysis-output'], 'w')
+         else
+           $stdout.dup
+         end
 
-  fo = if OPTIONS[:'analysis-output']
-         File.open(OPTIONS[:'analysis-output'], 'w')
-       else
-         $stdout.dup
-       end
+    IO.popen([cmdname, *args]) do |pipe|
+      fo.puts(pipe.readlines)
+    end
 
-  IO.popen([cmdname, *args]) do |pipe|
-    fo.puts(pipe.readlines)
+    fo.close
   end
-
-  fo.close
-  
-end
   exit(1) unless $?.success?
 end
 
@@ -706,7 +704,7 @@ if __FILE__ == $PROGRAM_NAME
             'Use -1 to mean all ranks.',
             default: Set[-1]) do |ranks|
     ranks.to_set do |r|
-      if r.match?(/^\d+$/) || r == "-1"
+      if r.match?(/^\d+$/) || r == '-1'
         r.to_i
       else
         raise(OptionParser::ParseError,
