--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -97,17 +97,48 @@ jobs:
             build/config.log
             build/**/tests/*.log
 
+  install-with-mpi-daemon:
+    needs: [babeltrace2, pre_job, install_with_mpi]
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
+    name: Build and Check ubuntu-latest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mpi4py/setup-mpi@v1
+      - uses: actions/cache@v4
+        id: babeltrace2
+        env:
+          cache-name: cache-babeltrace2
+        with:
+          path: ~/babeltrace2/2.0.4
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler valgrind
+      - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
+      - name: Load Babeltrace2
+        run: |
+          echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
+          echo "PKG_CONFIG_PATH=$HOME/babeltrace2/2.0.4/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
+          echo "CPATH=$HOME/babeltrace2/2.0.4/include:$CPATH" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+          echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
+      - run: mkdir -p build
+      - run: ./autogen.sh
+      - run: ../configure --prefix=`pwd`/ici
+        working-directory: build
+      - run: make -j install
+        working-directory: build
+
   integration-tests:
-    needs: [babeltrace2, pre_job]
+    needs: [babeltrace2, pre_job, install_with_mpi]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Integration ${{ matrix.bats_file }} ${{matrix.thapi_sync_daemon }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        thapi_sync_daemon: [ 'fs'] # 'mpi' ]
-        bats_file: ['mpi_test'] # 'sync_daemon_test']
-        #include:
-        #  - bats_file: no_mpi
+        thapi_sync_daemon: ['fs'] # 'mpi' ]
+        bats_file: ['mpi_sync_daemon', 'mpi_iprof']
+        include:
+          - bats_file: 'iprof'
     env:
       THAPI_TEST_BIN: clinfo
       THAPI_BIN_DIR: ./build/ici/bin
@@ -123,7 +154,7 @@ jobs:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler libpocl2 clinfo valgrind
-      - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
+      - run: sudo gem install babeltrace2 opencl_ruby_ffi
       - name: Load Babeltrace2
         run: |
           echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
@@ -131,29 +162,9 @@ jobs:
           echo "CPATH=$HOME/babeltrace2/2.0.4/include:$CPATH" >> $GITHUB_ENV
           echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
           echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
-      - run: mkdir -p build
-      - run: ./autogen.sh
-      - run: ../configure --prefix=`pwd`/ici
-        working-directory: build
-      - run: make -j install
-        working-directory: build
-      - name: Checkout bats
-        uses: actions/checkout@v4
-        with:
-          repository: bats-core/bats-core
-          path: bats-core
-      - name: print-env
+      - name: integration test ${{ matrix.bats_file }}
         run: |
-          THAPI_JOBID=0 mpirun -n 2 env
-      - name: SANITY
-        run: |
-          THAPI_JOBID=0 ${MPIRUN:-mpirun} -n 2 ruby -e "puts 'OK'"
-      - name: integration test-2 ${{ matrix.bats_file }}
-        run: |
-          THAPI_JOBID=0 ${MPIRUN:-mpirun} -n 2 $THAPI_BIN_DIR/iprof --debug 0 -- $THAPI_TEST_BIN
-#      - name: integration test ${{ matrix.bats_file }}
-#        run: |
-#          BATS_TEST_TIMEOUT=30 ./bats-core/bin/bats --print-output-on-failure --show-output-of-passing-tests  integration_tests/${{ matrix.bats_file }}.bats
+          ./bats-core/bin/bats integration_tests/${{ matrix.bats_file }}.bats
 
   build-in-tree:
     needs: [babeltrace2, pre_job]
