--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -97,7 +97,7 @@ jobs:
             build/config.log
             build/**/tests/*.log
 
-  install-with-mpi-daemon:
+  install_with_mpi:
     needs: [babeltrace2, pre_job, install_with_mpi]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Build and Check ubuntu-latest
