--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -98,7 +98,7 @@ jobs:
             build/**/tests/*.log
 
   install_with_mpi:
-    needs: [babeltrace2, pre_job, install_with_mpi]
+    needs: [babeltrace2, pre_job]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Build and Check ubuntu-latest
     runs-on: ubuntu-latest
