--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -127,10 +127,12 @@ jobs:
         working-directory: build
       - run: make -j install
         working-directory: build
+      - name: Tar THAPI # https://github.com/actions/download-artifact?tab=readme-ov-file#permission-loss
+        run: tar -cvf thapi.tar ./build/ici/
       - uses: actions/upload-artifact@v4
         with:
           name: thapi-bin
-          path: ./build/ici/
+          path: thapi.tar
 
   integration-tests:
     needs: [babeltrace2, pre_job, install_with_mpi]
@@ -160,7 +162,9 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: thapi-bin
-          path: ./build/ici/
+          path: thapi.tar
+      - name: Untar THAPI
+        run: tar -xvf thapi.tar
       - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler libpocl2 clinfo valgrind bats
       - run: sudo gem install babeltrace2 opencl_ruby_ffi
       - name: Load Babeltrace2
