--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -141,10 +141,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        thapi_sync_daemon: ['mpi'] #['fs', 'mpi']
-        bats_file: ['mpi_iprof'] #['mpi_sync_daemon', 'mpi_iprof']
-        #include:
-        #  - bats_file: 'iprof'
+        thapi_sync_daemon: ['fs', 'mpi']
+        bats_file: ['mpi_sync_daemon', 'mpi_iprof']
+        include:
+          - bats_file: 'iprof'
     env:
       THAPI_TEST_BIN: clinfo
       THAPI_BIN_DIR: ./build/ici/bin
@@ -170,9 +170,6 @@ jobs:
         run: |
           echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
           echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
-      - name: Sanity
-        run: |
-          THAPI_JOBID=0 ${MPIRUN:-mpirun} -n 2 $THAPI_BIN_DIR/iprof --debug 0 -- $THAPI_TEST_BIN
       - name: integration test ${{ matrix.bats_file }}
         run: |
           bats integration_tests/${{ matrix.bats_file }}.bats
