--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -97,21 +97,11 @@ jobs:
             build/config.log
             build/**/tests/*.log
 
-  integration-tests:
+  install_with_mpi:
     needs: [babeltrace2, pre_job]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    name: Integration ${{ matrix.bats_file }} ${{matrix.thapi_sync_daemon }}
+    name: Install with MPI daemon support
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        thapi_sync_daemon: [ 'fs', 'mpi' ]
-        bats_file: ['mpi_test', 'sync_daemon_test']
-        include:
-          - bats_file: no_mpi
-    env:
-      THAPI_TEST_BIN: clinfo
-      THAPI_BIN_DIR: ./build/ici/bin
-      THAPI_SYNC_DAEMON: ${{ matrix.thapi_sync_daemon }}
     steps:
       - uses: actions/checkout@v4
       - uses: mpi4py/setup-mpi@v1
@@ -122,7 +112,7 @@ jobs:
         with:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
-      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler bats libpocl2 clinfo valgrind
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler 
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -137,6 +127,49 @@ jobs:
         working-directory: build
       - run: make -j install
         working-directory: build
+      - name: Tar THAPI # https://github.com/actions/download-artifact?tab=readme-ov-file#permission-loss
+        run: tar -cvf thapi.tar ./build/ici/
+      - uses: actions/upload-artifact@v4
+        with:
+          name: thapi-bin
+          path: thapi.tar
+
+  integration-tests:
+    needs: [babeltrace2, pre_job, install_with_mpi]
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
+    name: Integration ${{ matrix.bats_file }} ${{matrix.thapi_sync_daemon }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        thapi_sync_daemon: ['fs', 'mpi']
+        bats_file: ['mpi_sync_daemon', 'mpi_iprof']
+        include:
+          - bats_file: 'iprof'
+    env:
+      THAPI_TEST_BIN: clinfo
+      THAPI_BIN_DIR: ./build/ici/bin
+      THAPI_SYNC_DAEMON: ${{ matrix.thapi_sync_daemon }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mpi4py/setup-mpi@v1
+      - uses: actions/cache@v4
+        id: babeltrace2
+        env:
+          cache-name: cache-babeltrace2
+        with:
+          path: ~/babeltrace2/2.0.4
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+      - uses: actions/download-artifact@v4
+        with:
+          name: thapi-bin
+      - name: Untar THAPI
+        run: tar -xvf thapi.tar
+      - run: sudo apt update; sudo apt install -y lttng-tools liblttng-ust-dev ruby ruby-dev libprotobuf-dev libpocl2 clinfo bats
+      - run: sudo gem install babeltrace2 opencl_ruby_ffi
+      - name: Load Babeltrace2
+        run: |
+          echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
+          echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
       - name: integration test ${{ matrix.bats_file }}
         run: |
           bats integration_tests/${{ matrix.bats_file }}.bats
