--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -186,6 +186,24 @@
                 :type: integer_unsigned
                 :field_value_range: 32
                 :cast_type: uint32_t
+            - :name: portId
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: remotePortId
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: rxThroughput
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: txThroughput
+              :field_class:
+                :type: double
+                :cast_type: float
             - :name: rxSpeed
               :field_class:
                 :type: double
