--- a/mpi/Makefile.am
+++ b/mpi/Makefile.am
@@ -45,6 +45,11 @@ MPI_MODEL = \
 	$(top_srcdir)/utils/LTTng.rb \
 	$(MPI_EXTRACTED)
 
+EXTRA_DIST += \
+	mpi_model.rb \
+	gen_probe_base.rb \
+	$(srcdir)/mpi_meta_parameters.yaml
+
 MPI_PROBES = mpi_tracepoints
 MPI_PROBES_TP = $(MPI_PROBES:=.tp)
 MPI_PROBES_INCL = $(MPI_PROBES:=.h)
@@ -67,3 +72,56 @@ EXTRA_DIST += \
 BUILT_SOURCES = \
         $(MODIFIED_MPI_HDR) \
         $(MPI_PROBES_INCL)
+
+tracer_mpi.c: $(srcdir)/gen_mpi.rb $(MPI_MODEL) $(MPI_PROBES_INCL)
+	SRC_DIR=$(srcdir) $(RUBY) $< > $@
+
+EXTRA_DIST += \
+	gen_mpi.rb
+
+CLEANFILES += \
+	tracer_mpi.c
+
+bin_SCRIPTS = \
+	tracer_mpi.sh
+
+noinst_LTLIBRARIES = \
+	libmpitracepoints.la
+
+nodist_libmpitracepoints_la_SOURCES = \
+	$(MPI_PROBES_INCL) \
+	$(MPI_PROBES_SRC)
+
+libmpitracepoints_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./
+libmpitracepoints_la_CFLAGS = -fPIC -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare $(WERROR) $(LTTNG_UST_CFLAGS)
+libmpitracepoints_la_LDFLAGS = $(LTTNG_UST_LIBS)
+
+lib_LTLIBRARIES = \
+	libTracerMPI.la
+
+nodist_libTracerMPI_la_SOURCES = \
+	$(MPI_PROBES_INCL) \
+	tracer_mpi.c
+
+libTracerMPI_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(top_srcdir)/sampling -I$(srcdir)/include -I./utils -I./
+libTracerMPI_la_CFLAGS = -Wall -Wextra $(WERROR) $(LIBFFI_CFLAGS) $(LTTNG_UST_CFLAGS)
+libTracerMPI_la_LDFLAGS = $(LTTNG_UST_LIBS) -ldl -lpthread $(LIBFFI_LIBS) ../sampling/libThapiSampling.la
+libTracerMPI_la_LIBADD = libmpitracepoints.la
+
+install-exec-hook:
+	$(MKDIR_P) $(DESTDIR)$(pkglibdir)/mpi
+	$(LN_S) -f $(DESTDIR)$(libdir)/libTracerMPI.so.1.0.0 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so.1
+	$(LN_S) -f $(DESTDIR)$(pkglibdir)/cuda/libmpi.so.1 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so
+
+
+uninstall-hook:
+	$(RM) -f $(DESTDIR)$(libdir)/libTracerMPI.so.1.0.0 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so.1
+	$(RM) -f $(DESTDIR)$(pkglibdir)/mpi/libmpi.so.1 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so
+	-rmdir $(DESTDIR)$(pkglibdir)/mpi
+
+tmplibdir = $(libdir)/tmp
+install-data-hook:
+	$(RM) -r $(DESTDIR)$(tmplibdir)
+
+EXTRA_DIST += mpi.h.include
+
